# Lumora

./: .gitignore  README.docx  README.md  convert_and_clean.py  ct.ipynb  ct_rate_train_local.ipynb  ct_rate_train_local.py  ct_rate_utils.py  download_ct_rate_subset.py  evaluate_final_model_accuracy.py  evaluate_vlm.py  evaluate_xray_ct_models.ipynb  genaralize.ipynb  lumora_train_local.ipynb  main.py  merge.ipynb  mimic-cxr.ipynb  mimic_cxr_translated.csv  pyproject.toml  todo.md  train.ipynb  translated_ct_reports.csv  xray_train_local.ipynb  yolo_task.ipynb
.github/workflows/: ci.yml  deploy-hf-space.yml  upload-hf-models.yml
Xray_ct_scan_model/: yolo_task.ipynb
Xray_model/: yolo_task.ipynb
docs/: chexnet.md  huggingface-cicd.md
lumora-web/backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
lumora-web/backend/lib/: MedicalReportGenerator.py  polish_model_text.py
lumora-web/frontend/: package-lock.json
lumora-web/frontend/src/app/: globals.css  layout.tsx  page.tsx
lumora-web/frontend/src/app/about/: page.tsx
lumora-web/frontend/src/app/analyze/: page.tsx
lumora-web/frontend/src/app/comparison/: page.tsx
lumora-web/frontend/src/app/how-it-works/: page.tsx
lumora-web/frontend/src/app/models/: page.tsx
lumora-web/frontend/src/app/workspace/: page.tsx
lumora-web/frontend/src/components/: Footer.tsx  Header.tsx  Navbar.tsx
model_export/: hybrid_lstm_classifier.pt  model_config.json  model_utils.py
scripts/: upload_hf_model.py
