[project]
name = "lumora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "ipywidgets>=8",
    "jupyterlab>=3",
    "matplotlib>=3.10.9",
    "nibabel>=5.4.2",
    "numpy>=2.4.6",
    "packaging>=26.2",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
    "typing-extensions>=4.15.0",
    "ultralytics>=8.4.62",
]

[tool.uv.workspace]
members = [
    "lumora",
]
