[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "huggingface-hub>=1.17.0",
    "python-multipart>=0.0.29",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
]
